--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   {% if site.author %}
   <meta name="author" content="{{ site.author }}">
   {% endif %}
-  
+  <script data-ad-client="ca-pub-7922964650087248" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   {% if page.subtitle %}
   <meta name="description" content="{{ page.subtitle }}">
   {% endif %}
