--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,6 +45,7 @@
   {% include gtag.html %}
   {% include gtm_head.html %}
   {% include google_analytics.html %}
+  {% include cloudflare_analytics.html %}
 
   {% if layout.common-ext-css %}
     {% for css in layout.common-ext-css %}
@@ -58,80 +59,69 @@
     {% endfor %}
   {% endif %}
 
+  {% if site.site-css %}
+    {% for css in site.site-css %}
+      <link rel="stylesheet" href="{{ css | relative_url }}">
+    {% endfor %}
+  {% endif %}
+
   {% if page.ext-css %}
     {% for css in page.ext-css %}
       {% include ext-css.html css=css %}
     {% endfor %}
   {% endif %}
-
+  
   {% if page.css %}
     {% for css in page.css %}
       <link rel="stylesheet" href="{{ css | relative_url }}">
     {% endfor %}
   {% endif %}
 
-  <!-- Facebook OpenGraph tags -->
   {% if site.fb_app_id %}
   <meta property="fb:app_id" content="{{ site.fb_app_id }}">
   {% endif %}
 
-  {% if page.meta-title %}
-  <meta property="og:title" content="{{ page.meta-title }}">
-  {% elsif page.title %}
-  <meta property="og:title" content="{{ page.title }}">
-  {% elsif site.title %}
-  <meta property="og:title" content="{{ site.title }}">
+  {% if site.title %}
+  <meta property="og:site_name" content="{{ site.title }}">
   {% endif %}
 
-   {% if page.meta-description %}
-  <meta property="og:description" content="{{ page.meta-description }}">
-  {% elsif page.subtitle %}
-  <meta property="og:description" content="{{ page.subtitle }}">
-  {% else %}
-  <meta property="og:description" content="{{ page.content | strip_html | xml_escape | truncatewords: 50 }}">
-  {% endif %}
+  {%- capture img -%}
+    {%- if page.share-img -%}
+      {{ page.share-img }}
+    {%- elsif page.cover-img -%}
+      {%- if page.cover-img.first -%}
+        {{ page.cover-img[0].first.first }}
+      {%- else -%}
+        {{ page.cover-img }}
+      {%- endif -%}
+    {%- elsif page.thumbnail-img -%}
+      {{ page.thumbnail-img }}
+    {%- elsif site.avatar -%}
+      {{ site.avatar }}
+    {% endif %}
+  {%- endcapture -%}
+  {%- assign img=img | strip -%}
 
+  <meta property="og:title" content="{{ title }}">
+  <meta property="og:description" content="{{ description }}">
+
+  {% if img != "" %}
+  <meta property="og:image" content="{{ img | absolute_url }}">
+  {% endif %}
 
   {% if page.id %}
   <meta property="og:type" content="article">
   <meta property="og:article:author" content="{{ site.author }}">
   <meta property="og:article:published_time" content="{{ page.date | date_to_xmlschema }}">
-  {% else %}
-  <meta property="og:type" content="website">
-  {% endif %}
-
-  {% if page.id %}
   <meta property="og:url" content="{{ page.url | absolute_url }}">
   <link rel="canonical" href="{{ page.url | absolute_url }}">
   {% else %}
+  <meta property="og:type" content="website">
   <meta property="og:url" content="{{ page.url | absolute_url | strip_index }}">
   <link rel="canonical" href="{{ page.url | absolute_url | strip_index }}">
   {% endif %}
 
-  {%- capture shareimg -%}
-    {% if page.share-img %}
-      {{ page.share-img }}
-    {% elsif page.cover-img %}
-      {% if page.cover-img.first %}
-        {{ page.cover-img[0].first.first }}
-      {% else %}
-        {{ page.cover-img }}
-      {% endif %}
-    {% elsif page.thumbnail-img %}
-      {{ page.thumbnail-img }}
-    {% elsif site.avatar %}
-      {{ site.avatar }}
-    {% endif %}
-  {% endcapture %}
-  {% assign shareimg=shareimg | strip %}
-
-  {% if shareimg != "" %}
-  <meta property="og:image" content="{{ shareimg | absolute_url }}">
-  {% endif %}
-
-
-  <!-- Twitter summary cards -->
-  {% if shareimg != "" and shareimg != site.avatar %}
+  {% if img != "" and img != site.avatar %}
   <meta name="twitter:card" content="summary_large_image">
   {% else %}
   <meta name="twitter:card" content="summary">
@@ -139,33 +129,23 @@
   <meta name="twitter:site" content="@{{ site.social-network-links.twitter }}">
   <meta name="twitter:creator" content="@{{ site.social-network-links.twitter }}">
 
-  {% if page.meta-title %}
-  <meta name="twitter:title" content="{{ page.meta-title }}">
-  {% elsif page.title %}
-  <meta name="twitter:title" content="{{ page.title }}">
-  {% else %}
-  <meta name="twitter:title" content="{{ site.title }}">
+  <meta property="twitter:title" content="{{ title }}">
+  <meta property="twitter:description" content="{{ description }}">
+
+  {% if img != "" %}
+  <meta name="twitter:image" content="{{ img | absolute_url }}">
   {% endif %}
 
-  {% if page.meta-description %}
-  <meta name="twitter:description" content="{{ page.meta-description }}">
-  {% elsif page.subtitle %}
-  <meta name="twitter:description" content="{{ page.subtitle }}">
-  {% else %}
-  <meta name="twitter:description" content="{{ page.content | strip_html | xml_escape | truncatewords: 50 }}">
-  {% endif %}
-
-  {% if shareimg != "" %}
-  <meta name="twitter:image" content="{{ shareimg | absolute_url }}">
-  {% endif %}
-
-  {% if site.matomo %}
   {% include matomo.html %}
-  {% endif %}
 
   {% if page.comments and site.staticman.repository and site.staticman.branch %}
-  <!-- Staticman -->
   <link rel="stylesheet" href="{{ "/assets/css/staticman.css" | relative_url }}">
+  {% endif %}
+
+  {% if page.head-extra %}
+    {% for file in page.head-extra %}
+      {% include {{ file }} %}
+    {% endfor %}
   {% endif %}
 
 </head>
